2000-06-28  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc.el (mhc-scan-month): `set-buffer-modified-p' as nil.

	* emacs/mhc-compat.el (mhc-string-to-char-list): New function.

	* emacs/mhc-summary.el (mhc-summary-line-format): Fixed docstring.
	(mhc-summary-todo-line-format): Ditto.
	(mhc-summary-line-format-alist): Ditto.
	(mhc-summary-todo-line-format-alist): Ditto.
	(mhc-summary/line-inserter-setup-internal): New function.
	(mhc-summary-todo-line-inserter-setup): Eliminated.
	(mhc-summary/line-parse-format): Use `mhc-string-to-char-list'.

	* emacs/mhc.el (mhc-setup):
	Delete `mhc-summary-todo-line-inserter-setup'.

2000-06-27  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc.el (mhc-current-date): New implementation.

	* emacs/mhc-summary.el (mhc-summary/line-parse-format):
	Treat characters after '%' as spec, insert as-is otherwise.
	(mhc-summary-line-format): Likewise.
	(mhc-summary-todo-line-format): Likewise.
	(mhc-summary-icon-position): Eliminated.

	* emacs/mhc-mew.el (mhc-mew-insert-summary-contents): Fixed.

	* emacs/mhc-summary.el (mhc-summary-line-format): New user option.
	(mhc-summary-todo-line-format): Ditto.
	(mhc-summary-insert-contents): Rewrite.
	(mhc-summary/insert-dayinfo): Ditto.
	(mhc-summary-search-date): Ditto.
	(mhc-summary-make-todo-list): Ditto.
	(mhc-summary/insert-strings): Eliminated.
	(mhc-summary/schedule-to-contents): Ditto.
	(mhc-summary/insert-dayinfo-internal): Ditto.
	(mhc-tmp-day-face): New variable.
	(mhc-tmp-dayinfo): Ditto.
	(mhc-tmp-schedule): Ditto.
	(mhc-tmp-begin): Ditto.
	(mhc-tmp-end): Ditto.
	(mhc-tmp-conflict): Ditto.
	(mhc-tmp-first): Ditto.
	(mhc-tmp-private): Ditto.
	(mhc-tmp-day): Ditto.
	(mhc-tmp-lank): Ditto.
	(mhc-tmp-deadline): Ditto.
	(mhc-summary-line-format-alist): Ditto.
	(mhc-summary-todo-line-format-alist): Ditto.
	(mhc-summary/line-inserter): Ditto.
	(mhc-summary-todo/line-inserter): Ditto.
	(mhc-summary/line-insert): New macro.
	(mhc-summary/line-year-string): New function.